# bep-thesis-mathijs-ms-algos

./: export.yml  main.py  myst.yml  pyproject.toml  requirements.txt  toc.yml
.github/workflows/: deploy.yml
content/: AdditionalPlots.md  ComparativeAnalysis.md  Conclusion.md  FCMS.md  Index.md  PCMS.md  Recommendations.md  Theory.md  testnotebook.md
content/notebooks/: CBED_multislice.ipynb  multislice_fast.ipynb  planewave_multislice.ipynb  thesis_sourcecode.md
