[project]
name = "bep-thesis-mathijs-ms-algos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "abtem",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
]

[tool.uv.sources]
abtem = { git = "https://github.com/abTEM/abTEM" }
